# sketch

./: pyproject.toml
generate/src/: main.py
src/: main.py
